--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,18 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="bande" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url(https://blogdotjapancentredotcom.files.wordpress.com/2015/02/izakaya-dinner-time-in-tokyo-by-tokyo-fahion-flickr.jpg)">
+  <div class="banner-content">
+    <h1>Sumimasen</h1>
+    <p>Oishi desu!</p>
+  </div>
+</div>
+<!-- <div>
+  <div class="grid">
+          <li class="grid_item span__1 a"><a href="#" class="grid_link"><div class="tile">1</div></a></li>
+          <li class="grid_item span__2 b"><%#link_to recipe_path(@recipes[]), %><div class="tile">2</div></li>
+          <li class="grid_item span__1 c"><a href="#" class="grid_link"><div class="tile">3</div></a></li>
+          <li class="grid_item span__2 d"><a href="#" class="grid_link"><div class="tile">4</div></a></li>
+          <li class="grid_item span__1 e"><a href="#" class="grid_link"><div class="tile">5</div></a></li>
+          <li class="grid_item span__1 f"><a href="#" class="grid_link"><div class="tile">6</div></a></li>
+          <li class="grid_item span__5 g"><a href="#" class="grid_link"><div class="tile">7</div></a></li>
+  </div>
+</div>
+ -->
