--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,4 +1,3 @@
-
 <div class="wrapper">
   <div class="container">
     <div align="center">
@@ -7,10 +6,10 @@
           <% @recipes.each do |recipe| %>
             <li style="list-style: none">
               <%= link_to recipe.title, recipe_path(recipe) %>
-                <% if policy(recipe).update? %>
+                <% if recipe && policy(recipe).update? %>
                 <%= link_to 'delete', recipe_path(recipe), method: :delete %>
                 <%= link_to 'edit', edit_recipe_path(recipe)%>
-                <% end %>
+              <% end %>
             </li>
           <% end %>
         </ul>
