Add figaro - Protect my secret data in config/application.yml

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-<div class="bande" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url(https://blogdotjapancentredotcom.files.wordpress.com/2015/02/izakaya-dinner-time-in-tokyo-by-tokyo-fahion-flickr.jpg)">
+<div class="bande" style="background-image:/* linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%),*/ url(https://mycookingideas.com/wp-content/uploads/2016/05/japan10.jpg)">
   <div class="banner-content">
     <h1>Sumimasen</h1>
     <p>Oishi desu!</p>
