bloqué par le login

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,6 +4,9 @@
     <p>Oishi desu!</p>
   </div>
 </div>
+<div>
+  <%= render 'form' %>
+</div>
 <!-- <div>
   <div class="grid">
           <li class="grid_item span__1 a"><a href="#" class="grid_link"><div class="tile">1</div></a></li>
