formulaire email de la home

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,7 +5,18 @@
   </div>
 </div>
 <div>
-  <%= render 'form' %>
+  <div class="container">
+    <div class="row">
+      <div class="col-xs-4 col-xs-offset-4">
+        <div class="form-wrapper">
+          <%= simple_form_for @email do |f| %>
+            <%= f.input :email_address, label: false, placeholder: 'Your email address' %>
+            <%= f.button :submit, class: "btn btn-info"%>
+          <% end %>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
 <!-- <div>
   <div class="grid">
