--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,7 +1,7 @@
 <div class="navbar-component">
   <!-- Logo -->
   <%= link_to root_path, class: "navbar-brand" do %>
-    <%= image_tag "logo.jpg" %>
+    <%= image_tag "https://image.flaticon.com/icons/svg/68/68099.svg" %>
   <% end %>
 
   <!-- Right Navigation -->
