--- a/app/views/recipes/add_details.html.erb
+++ b/app/views/recipes/add_details.html.erb
@@ -1,32 +1,45 @@
+<link rel="stylesheet" href="//unpkg.com/iview/dist/styles/iview.css">
+<script src="//unpkg.com/vue/dist/vue.js"></script>
+<script src="//unpkg.com/iview/dist/iview.min.js"></script>
+
 <div class="container">
   <div id="recipe_add_details">
     <h1 class="text-center"><strong><%= @recipe.title %></strong></h1>
 
+    <!-- MEASURES -->
     <div class="recipe-measures">
       <h4>Ajout des mesures</h4>
     </div>
 
+    <!-- TAGS -->
     <div class="recipe-tags">
       <h4>Tags</h4>
       <div class="col-xs-3">
-        <ul>
+        <template>
+          <i-select v-model="selectedTags" multiple style="width:260px">
+              <Option v-for="tag in tags" :value="tag.name" :key="tag.name">{{ tag.name }}</Option>
+          </i-select>
+        </template>
+        <!-- <ul>
           <li v-for="tag in tags">
             <p>{{ tag.name }}</p>
           </li>
-        </ul>
+        </ul> -->
       </div>
     </div>
 
+    <!-- TOOLS -->
     <div class="recipe-tools">
       <h4>Ustensiles</h4>
       <div class="col-xs-3">
-          <ul>
-            <li v-for="tool in tools">
-              <p>{{ tool.name }}</p>
-            </li>
-          </ul>
+        <template>
+          <i-select v-model="selectedTools" multiple style="width:260px">
+              <Option v-for="tool in tools" :value="tool.name" :key="tool.name">{{ tool.name }}</Option>
+          </i-select>
+        </template>
       </div>
     </div>
+
   </div>
 </div>
 
