--- a/app/views/recipes/add_details.html.erb
+++ b/app/views/recipes/add_details.html.erb
@@ -1,6 +1,4 @@
 <link rel="stylesheet" href="//unpkg.com/iview/dist/styles/iview.css">
-<script src="//unpkg.com/vue/dist/vue.js"></script>
-<script src="//unpkg.com/iview/dist/iview.min.js"></script>
 
 <div class="container">
   <div id="recipe_add_details">
@@ -17,14 +15,10 @@
       <div class="col-xs-3">
         <template>
           <i-select v-model="selectedTags" multiple style="width:260px">
-              <Option v-for="tag in tags" :value="tag.name" :key="tag.name">{{ tag.name }}</Option>
+            <i-option v-for="tag in tags" :value="tag.id" :key="tag.name">{{ tag.name }}</i-option>
           </i-select>
         </template>
-        <!-- <ul>
-          <li v-for="tag in tags">
-            <p>{{ tag.name }}</p>
-          </li>
-        </ul> -->
+        <button v-on:click="addTags(selectedTags)">Ajouter</button>
       </div>
     </div>
 
@@ -34,9 +28,10 @@
       <div class="col-xs-3">
         <template>
           <i-select v-model="selectedTools" multiple style="width:260px">
-              <Option v-for="tool in tools" :value="tool.name" :key="tool.name">{{ tool.name }}</Option>
+            <i-option v-for="tool in tools" :value="tool.id" :key="tool.name">{{ tool.name }}</i-option>
           </i-select>
         </template>
+        <button v-on:click="addTools(selectedTools)">Ajouter</button>
       </div>
     </div>
 
