--- a/app/views/recipes/add_details.html.erb
+++ b/app/views/recipes/add_details.html.erb
@@ -12,27 +12,30 @@
     <!-- TAGS -->
     <div class="recipe-tags">
       <h4>Tags</h4>
-      <div class="col-xs-3">
-        <template>
-          <i-select v-model="selectedTags" multiple style="width:260px">
-            <i-option v-for="tag in tags" :value="tag.id" :key="tag.name">{{ tag.name }}</i-option>
-          </i-select>
-        </template>
-        <button v-on:click="addTags(selectedTags)">Ajouter</button>
-      </div>
+      <template>
+        <i-select v-model="selectedTags" multiple style="width:260px">
+          <i-option v-for="tag in tags" :value="tag.id" :key="tag.name">{{ tag.name }}</i-option>
+        </i-select>
+      </template>
+      <button v-on:click="addTags(selectedTags)" class="btn btn-sm btn-info">Update</button>
+      <collapse style="width:290px">
+        <panel name="1">
+          Ajouter un tag
+            <input v-model="tagName" type="text" slot="content" class="form-control" id="tagName" placeholder="Nom du tag" style="width:260px">
+            <button v-on:click="createTag(tagName)" class="btn btn-sm btn-success" slot="content">Ajouter</button>
+        </panel>
+    </collapse>
     </div>
 
     <!-- TOOLS -->
     <div class="recipe-tools">
       <h4>Ustensiles</h4>
-      <div class="col-xs-3">
-        <template>
-          <i-select v-model="selectedTools" multiple style="width:260px">
-            <i-option v-for="tool in tools" :value="tool.id" :key="tool.name">{{ tool.name }}</i-option>
-          </i-select>
-        </template>
-        <button v-on:click="addTools(selectedTools)">Ajouter</button>
-      </div>
+      <template>
+        <i-select v-model="selectedTools" multiple style="width:260px">
+          <i-option v-for="tool in tools" :value="tool.id" :key="tool.name">{{ tool.name }}</i-option>
+        </i-select>
+      </template>
+      <button v-on:click="addTools(selectedTools)" class="btn btn-sm btn-info">Update</button>
     </div>
 
   </div>
