--- a/app/views/recipes/add_details.html.erb
+++ b/app/views/recipes/add_details.html.erb
@@ -36,11 +36,17 @@
       <h4>Créer les élements manquants</h4>
       <collapse style="width:290px">
         <panel name="1">
+          Ajouter un ingrédient
+          <input v-model="newIngredient.name" type="text" slot="content" class="form-control" id="ingredientName" placeholder="Nom de l'ingrédient" style="width:260px">
+          <input v-model="newIngredient.description" type="text" slot="content" class="form-control" id="ingredientDescription" placeholder="Description" style="width:260px">
+          <button v-on:click="createIngredient(newIngredient)" class="btn btn-sm btn-success" slot="content">Ajouter</button>
+        </panel>
+        <panel name="2">
           Ajouter un tag
           <input v-model="newTag.name" type="text" slot="content" class="form-control" id="tagName" placeholder="Nom du tag" style="width:260px">
           <button v-on:click="createTag(newTag)" class="btn btn-sm btn-success" slot="content">Ajouter</button>
         </panel>
-        <panel name="2">
+        <panel name="3">
           Ajouter un ustensil
           <input v-model="newTool.name" type="text" slot="content" class="form-control" id="toolName" placeholder="Nom de l'ustensil" style="width:260px">
           <button v-on:click="createTool(newTool)" class="btn btn-sm btn-success" slot="content">Ajouter</button>
