--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,7 +2,7 @@
 <div class="bande" style="background-image:linear-gradient(-225deg, #c21500, #ffc500 50%), url(https://mycookingideas.com/wp-content/uploads/2016/05/japan10.jpg)">
   <div class="banner-content">
     <h1>Oishi</h1>
-    <p class="progressif">La gastronomie japonaise simplifiée</p>
+    <p class="progressif">La bite japonaise simplifiée</p>
     <div class="container">
     <!-- <div class="row"> -->
       <div class="col-xs-4 col-xs-offset-4">
