--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -3,7 +3,7 @@
     <div class="col-xs-12 ">
       <div class="recipe-photo">
         <% if @recipe.photos? %>
-          <%= cl_image_tag @recipe.photos[0].path, crop: :fit %>
+          <%= cl_image_tag @recipe.photos[0].path %>
         <% end %>
       </div>
       <div class="recipe-title">
@@ -30,3 +30,5 @@
 </div>
 
 
+<!-- http://res.cloudinary.com/dgv0y9kj7/image/upload/v1517345102/wth5wmmmmaixoeur7dl4.jpg -->
+<!-- http://dgv0y9kj7-res.cloudinary.com/image/upload/v1517345102/wth5wmmmmaixoeur7dl4.jpg -->
