--- a/app/views/recipes/add_details.html.erb
+++ b/app/views/recipes/add_details.html.erb
@@ -6,10 +6,12 @@
     <div class="select-details">
       <!-- MEASURES -->
       <div class="recipe-measures">
-        <ul v-for="(measure, index) in measures" id="measure-list">
-          <div style="display: flex; justify-content: space-between;">
+        <ul v-for="measure in measures" id="measure-list">
+          <div style="display: flex; justify-content: flex-start;">
+            <a v-on:click="editMeasure(measure)"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></a>
+            <a v-on:click="destroyMeasure(measure)" style="margin: 0px 5px;"><i class="fa fa-trash-o" aria-hidden="true"></i></a>
+            <p style="margin: 0px 5px;">|</p>
             <li>{{ measure.quantity }}{{ measure.text1 }}{{ measure.ingredient.name }}{{ measure.text2 }}</li>
-            <a v-on:click="editMeasure(measure, index)">Edit</a>
           </div>
         </ul>
         <h4>Ajout des mesures</h4>
