--- a/app/views/recipes/add_details.html.erb
+++ b/app/views/recipes/add_details.html.erb
@@ -1,51 +1,60 @@
 <link rel="stylesheet" href="//unpkg.com/iview/dist/styles/iview.css">
 
 <div class="container">
-  <h1 class="text-center"><strong><%= @recipe.title %><%= @recipe.id %></strong></h1>
+  <div class="recipe-title text-center">
+        <h2><strong><%= @recipe.title %></strong></h2>
+      </div>
   <div id="recipe_add_details">
     <div class="select-details">
       <!-- MEASURES -->
       <div class="recipe-measures">
-        <ul v-for="(measure, index) in measures" id="measure-list">
-          <div style="display: flex; justify-content: flex-start;">
-            <a v-on:click="editMeasure(measure)"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></a>
-            <a v-on:click="destroyMeasure(measure, index)" style="margin: 0px 5px;"><i class="fa fa-trash-o" aria-hidden="true"></i></a>
-            <p style="margin: 0px 5px;">|</p>
-            <li>{{ measure.quantity }}{{ measure.text1 }}{{ measure.ingredient.name }}{{ measure.text2 }}</li>
+        <div>
+          <h4>Liste des mesures</h4>
+          <ul v-for="(measure, index) in measures" id="measure-list">
+            <div style="display: flex; justify-content: flex-start;">
+              <a v-on:click="editMeasure(measure)"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></a>
+              <a v-on:click="destroyMeasure(measure, index)" style="margin: 0px 5px;"><i class="fa fa-trash-o" aria-hidden="true"></i></a>
+              <p style="margin: 0px 5px;">|</p>
+              <li>{{ measure.quantity }}{{ measure.text1 }}{{ measure.ingredient.name }}{{ measure.text2 }}</li>
+            </div>
+          </ul>
+        </div>
+        <div>
+          <h4>Ajout des mesures</h4>
+          <div style="display: flex;">
+            <input v-model="newMeasure.quantity" type="integer" class="form-control" placeholder="Quantité" style="width:200px; height: 32px;">
+            <input v-model="newMeasure.text1" type="text" class="form-control" placeholder="Texte 1" style="width:200px; height: 32px;">
+            <template>
+              <i-select v-model="newMeasure.ingredient.id" filterable style="width:200px">
+                <i-option v-for="ingredient in ingredients" :value="ingredient.id" :key="ingredient.name">{{ ingredient.name }}</i-option>
+              </i-select>
+            </template>
+            <input v-model="newMeasure.text2" type="text" class="form-control" placeholder="Texte 2 (optionel)" style="width:200px; height: 32px;">
+            <button v-on:click="createMeasure(newMeasure)" class="btn btn-sm btn-success" slot="content" style="height: 32px;">Ajouter</button>
           </div>
-        </ul>
-        <h4>Ajout des mesures</h4>
-        <input v-model="newMeasure.quantity" type="integer" class="form-control" placeholder="Quantité" style="width:260px">
-        <input v-model="newMeasure.text1" type="text" class="form-control" placeholder="Texte 1" style="width:260px">
-        <template>
-          <i-select v-model="newMeasure.ingredient.id" filterable style="width:260px">
-            <i-option v-for="ingredient in ingredients" :value="ingredient.id" :key="ingredient.name">{{ ingredient.name }}</i-option>
-          </i-select>
-        </template>
-        <input v-model="newMeasure.text2" type="text" class="form-control" placeholder="Texte 2 (optionel)" style="width:260px">
-        <button v-on:click="createMeasure(newMeasure)" class="btn btn-sm btn-success" slot="content">Ajouter</button>
+        </div>
       </div>
 
       <!-- TAGS -->
       <div class="recipe-tags">
         <h4>Tags</h4>
         <template>
-          <i-select v-model="selectedTags" multiple filterable style="width:260px">
+          <i-select v-model="selectedTags" multiple filterable style="width:300px; ">
             <i-option v-for="tag in tags" :value="tag.id" :key="tag.name">{{ tag.name }}</i-option>
           </i-select>
         </template>
-        <button v-on:click="addTags(selectedTags)" class="btn btn-sm btn-info">Update</button>
+        <button v-on:click="addTags(selectedTags)" class="btn btn-sm btn-info" style="height: 32px;">Update</button>
       </div>
 
       <!-- TOOLS -->
       <div class="recipe-tools">
         <h4>Ustensiles</h4>
         <template>
-          <i-select v-model="selectedTools" multiple filterable style="width:260px">
+          <i-select v-model="selectedTools" multiple filterable style="width:300px; ">
             <i-option v-for="tool in tools" :value="tool.id" :key="tool.name">{{ tool.name }}</i-option>
           </i-select>
         </template>
-        <button v-on:click="addTools(selectedTools)" class="btn btn-sm btn-info">Update</button>
+        <button v-on:click="addTools(selectedTools)" class="btn btn-sm btn-info" style="height: 32px;">Update</button>
       </div>
     </div>
 
