--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -1,30 +1,68 @@
 <div class="container">
   <div class="row">
     <div class="col-xs-12 ">
+
+      <!-- PHOTO -->
       <div class="recipe-photo">
         <% if @recipe.photos? %>
           <%= cl_image_tag @recipe.photos[0].path %>
         <% end %>
       </div>
-      <div class="recipe-title">
+
+      <!-- TITLE -->
+      <div class="recipe-title" style="display: flex; align-items: center;">
         <h2><strong><%= @recipe.title %></strong></h2>
+        <% if current_user.admin?%>
+          <%= link_to add_details_path(@recipe) do %>
+            <i class="fa fa-plus" aria-hidden="true"></i>
+          <% end %>
+        <% end %>
       </div>
+
+      <!-- SERVINGS -->
       <div class="recipe-servings">
         <p><%= @recipe.servings %> pers.</p>
       </div>
 
-        <ul id="measure-list">
+      <!-- MEASURES -->
+      <div class="measures-list">
+        <h3>Mesures</h3>
+        <ul>
           <% @measures.each do |measure| %>
             <li><p><%= measure.quantity %><%= measure.text_1 %><%= measure.ingredient.name %><%= measure.text_2 %></p>
             </li>
           <% end %>
         </ul>
+      </div>
+
+      <!-- TOOLS -->
+      <div class="tools-list">
+        <h3>Ustensiles</h3>
+        <ul>
+          <% @tools.each do |tool| %>
+            <li><p><%= tool.name %></p>
+            </li>
+          <% end %>
+        </ul>
+      </div>
+
+      <!-- TAGS -->
+      <div class="tags-list">
+        <h3>Tags</h3>
+        <ul>
+          <% @tags.each do |tag| %>
+            <li><p><%= tag.name %></p>
+            </li>
+          <% end %>
+        </ul>
+      </div>
 
       <!-- INSTRUCTIONS -->
       <div class="recipe-instructions">
-        <p><strong>Instructions</strong></p>
+        <h3>Instructions</h3>
         <%= @recipe.instructions%>
       </div>
+
     </div>
   </div>
 </div>
