--- a/app/views/recipes/add_details.html.erb
+++ b/app/views/recipes/add_details.html.erb
@@ -12,14 +12,14 @@
       <div class="recipe-measures">
         <div>
           <h4>Liste des mesures</h4>
-          <ul v-for="(measure, index) in measures" id="measure-list">
-            <div style="display: flex; justify-content: flex-start;">
+          <draggable v-model="measures">
+            <div v-for="(measure, index) in measures" :options="{draggable:'.item'}" style="display: flex; justify-content: flex-start;">
               <a v-on:click="editMeasure(measure)"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></a>
               <a v-on:click="destroyMeasure(measure, index)" style="margin: 0px 5px;"><i class="fa fa-trash-o" aria-hidden="true"></i></a>
               <p style="margin: 0px 5px;">|</p>
               <li>{{ measure.quantity }}{{ measure.text1 }}{{ measure.ingredient.name }}{{ measure.text2 }}</li>
             </div>
-          </ul>
+          </draggable>
         </div>
         <div>
           <h4>Ajout des mesures</h4>
