--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -1,6 +1,6 @@
 
 .bande{
-    color: white;
+    color: black;
     text-align: center;
     height: calc(100vh - 70px);
     background-size: cover !important;
@@ -14,5 +14,4 @@
     -ms-flex-pack: center;
     justify-content: center;
     font-style: fanwood;
-
 }
