--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -33,6 +33,12 @@
   border: 4px solid #FFF;
   box-shadow: 0 1px 2px rgba(0,0,0,0.2);
 }
+.bande{
+  .h1,p{
+  margin-bottom: 150%;
+  }
+}
+
 
 .tile {
   font-size: 14px;
