--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -4,8 +4,12 @@
     <%= image_tag "https://image.flaticon.com/icons/svg/68/68099.svg" %>
   <% end %>
 
+  <input type="text" name="fname">
+
   <!-- Right Navigation -->
   <div class="navbar-right hidden-xs hidden-sm">
+
+
 
     <% if user_signed_in? %>
 
