adding possibility to add a new step

--- a/app/views/recipes/add_details.html.erb
+++ b/app/views/recipes/add_details.html.erb
@@ -68,6 +68,7 @@
           <input class="form-control" type="text" v-model="step.text" style="margin: 0px 5px; width: 300px;">
           <button v-on:click="updateStep(step)" class="btn btn-sm btn-info">Update</button>
         </div>
+        <button v-on:click="addStep" class="btn btn-sm btn-success">Ajouter</button>
       </div>
     </div>
 
